# libcouchbase

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.manpage.inc  NMakefile  README  README.markdown  RELEASE_NOTES.markdown  configure.ac
cmake/: build-timestamp.h.in  check_config.h.in  config-cmake.h.in  configure  libcouchbase.stp.in  source_files.cmake
cmake/Modules/: ConfigureDtrace.cmake  CopyPDB.cmake  DownloadLcbDep.cmake  FindCouchbaseLibev.cmake  FindCouchbaseLibevent.cmake  FindCouchbaseSnappy.cmake  GenerateConfigDotH.cmake  GetLibcouchbaseFlags.cmake  GetPlatformCCInfo.cmake  GetVersionInfo.cmake
config/: Makefile.am  autorun.sh  configure.ac  gensrclist.pl
contrib/cJSON/: cJSON.c
contrib/cbsasl/: CMakeLists.txt
contrib/cliopts/: cliopts.c  cliopts.h
contrib/gtest-1.8.1/: CMakeLists.txt
contrib/http_parser/: http_parser.c  http_parser.h
contrib/lcb-jsoncpp/: lcb-jsoncpp.cpp
contrib/libvbucket/: cJSON.c  ketama.c  vbucket.c
contrib/snappy/: snappy.cc
debug/: debug.cc  sizes.c
doc/: Doxyfile  Makefile  cbc-n1qlback.markdown  cbc-pillowfight.markdown  cbc-subdoc.markdown  cbc.markdown  cbcrc.markdown  common-options.markdown  environment.h  gen_internal_apidoc.sh  genman.sh  libcouchbase.xml  mainpage.h
doc/example/: threads.c
doc/man/: cbc-n1qlback.1  cbc-pillowfight.1  cbc-subdoc.1  cbc.1  cbcrc.4
example/: CMakeLists.txt  README.markdown  couchview.c  couchview_yajl.c  memcat.c  memcp.c  memdump.c  memflush.c  memrm.c  memstat.c  pillowfight.cc
example/analytics/: analytics.c
example/analytics-deferred/: analytics-deferred.c
example/analytics-ingest/: analytics-ingest.c
example/crypto/: openssl_symmetric_decrypt.c  openssl_symmetric_encrypt.c  openssl_symmetric_provider.c
example/db/: db.c  dbx.cc  vb.c
example/debug/: debug.cc
example/fts/: fts.c
example/instancepool/: main.cc  pool.c  pool.cc  pool.h
example/libeventdirect/: main.c
example/libuvdirect/: main.c
example/mcc/: mcc.cc
example/minimal/: durability.cc  g3cp-async.c  g3cp.c  logger.c  minimal.c  query.c
example/observe/: durability.c  observe.c
example/pillowfight/: pillowfight.cc
example/subdoc/: subdoc-multi.cc  subdoc-simple.cc  subdoc-xattrs.c
example/syncmode/: main.c
example/threads-private/: threads-private.c
example/threads-shared/: threads-shared.c
example/tick/: tick.c
example/tracing/: tracing.c  views.c
example/users/: users.c
example/views/: views-example.cc
example/yajl/: couchview.c
include/ep-engine/: command_ids.h
m4/: couchbase.m4  pandora_have_libevent.m4  pandora_have_libyajl.m4  pandora_vc_build.m4
man/: cbc-pillowfight.1  cbc.1  cbcrc.4  generate.sh  genman.sh  manpages.mk  site.rb
packaging/: README  get_lcb.sh  libcouchbase.pc.in
src/: api4.h  arithmetic.c  aspend.h  auth-priv.h  auth.cc  auth.h  base64.c  bconf_io.c  bconf_parse.c  bconf_provider.c  behavior.c  bootstrap.c  bootstrap.cc  bootstrap.h  bootstrap_cccp.c  bootstrap_common.c  bootstrap_http.c  callbacks.c  cbft.cc  cntl.c  cntl.cc  collections.cc  collections.h  compat.c  config_cache.c  config_static.h  connect.c  connection_utils.c  connmgr.c  connmgr.h  connspec.c  connspec.cc  connspec.h  cookie.c  cookie.h  couch.c  cplusplus.cc  create.c  crypto.cc  ctx-log-inl.h  (+112 more)
tests/: CMakeLists.txt  Doxyfile  arithmetic-unit-test.cc  arithmetic.c  base64-test.c  base64-unit-test.cc  behavior-unit-tests.cc  ccbc_103.cc  check-all.cc  check-mans.sh  cluster-unit-tests.cc  config-test.c  configcache-unit-test.cc  confmon-unit-test.cc  connmgr-unit-test.cc  double-free-test.c  durability-unit-test.cc  flags-test.c  get-unit-test.cc  getopt-test.cc  getopt-unit-tests.cc  hashset-test.c  hashset-unit-test.cc  homebrew-acceptance-test.c  host-unit-test.cc  hostname-unit-test.cc  http-tests.cc  iops-unit-test.cc  list-unit-test.cc  lock-unit-test.cc  logger-unit-test.cc  loopfactory.c  memcached-compat-unit-test.cc  memcached_compat-test.c  mock-environment.cc  mock-environment.h  mock-unit-test.cc  mock-unit-test.h  mutate-unit-test.cc  packet-unit-test.cc  (+25 more)
tests/basic/: t_analytics.cc  t_collections.cc  t_connstr.cc  t_creds.cc  t_ctlcodes.cc  t_dsn.cc  t_host.cc  t_jsparse.cc  t_logger.cc  t_misc.cc  t_n1qlstrings.cc  t_netbuf.cc  t_slist.cc  t_strerror.cc  t_urlencode.cc
tests/htparse/: t_basic.cc
tests/ioserver/: connection.cc  ioserver.cc  ioserver.h  threads-pthreads.cc
tests/iotests/: iotests.h  mock-environment.cc  mock-environment.h  mock-unit-test.cc  mock-unit-test.h  serverparams.h  t_arithmetic.cc  t_behavior.cc  t_collections.cc  t_configcache.cc  t_confmon.cc  t_durability.cc  t_eerrs.cc  t_errmap.cc  t_forward.cc  t_get.cc  t_http.cc  t_iops.cc  t_lock.cc  t_misc.cc  t_mock.cc  t_mutate.cc  t_n1ql.cc  t_netfail.cc  t_obseqno.cc  t_ratelimit.cc  t_regression.cc  t_sched.cc  t_serverops.cc  t_smoke.cc  t_snappy.cc  t_subdoc.cc  t_syncmode.cc  t_timer.cc  t_views.cc  testutil.cc  testutil.h
tests/mc/: mctest.h  t_alloc.cc  t_context.cc  t_flush.cc  t_flush_deadline.cc  t_forward.cc  t_ioflush.cc  t_iovcursor.cc  t_replaced_packet.cc
tests/mocksupport/: server.c
tests/rdb/: t_basic.cc  t_bigalloc.cc  t_refs.cc
tests/socktests/: socktest.cc  socktest.h  t_basic.cc  t_dtor.cc  t_manager.cc  t_read.cc  t_ssl.cc
tests/vbucket/: t_config.cc
tests/vbucket/confdata/: full_30.json  terse_30.json
tools/: CMakeLists.txt  bench-script.txt  cbc-bench.cc  cbc-gen.cc  cbc-handlers.h  cbc-n1qlback.cc  cbc-pillowfight.cc  cbc-proxy.cc  cbc-receive.cc  cbc-send.cc  cbc-subdoc.cc  cbc-timestamp.cc  cbc-timestamp.h  cbc-util.cc  cbc-util.h  cbc.cc  commandlineparser.cc  commandlineparser.h  configuration.cc  configuration.h  histogram.cc  options.cc  options.h
tools/bench/: lexer.c
tools/common/: histogram.cc  histogram.h  my_inttypes.h  options.cc  options.h
tools/docgen/: docgen.h  placeholders.h  seqgen.h
tools/linenoise/: linenoise.c
win32/: config.h  dllversion.rc.in  getopt.c  getopt.h  inttypes.h  mingwdefs.h  myevent.h  stdbool.h  strings.h  win_errno_sock.h  win_stdint.h
(+478 files in other folders)
